--- a/package.json
+++ b/package.json
@@ -42,7 +42,10 @@
     "date-fns": "^3.6.0",
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.6.0",
+    "fast-xml-parser": "^4.4.0",
     "firebase": "^11.9.1",
+    "firebase-admin": "^12.2.0",
+    "firebase-functions": "^5.0.1",
     "genkit": "^1.14.1",
     "lucide-react": "^0.475.0",
     "next": "15.3.3",
@@ -52,8 +55,10 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "recharts": "^2.15.1",
+    "remove-markdown": "^0.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7",
+    "undici": "^6.19.2",
     "zod": "^3.24.2"
   },
   "devDependencies": {
