--- a/.github/workflows/pages.yml
+++ b/.github/workflows/pages.yml
@@ -24,14 +24,12 @@ jobs:
       - name: Setup Node
         uses: actions/setup-node@v4
         with:
-          node-version: ${{ vars.NODE_VERSION || 20 }}
-          cache: 'pnpm'
+          node-version: ${{ vars.NODE_VERSION || 20.19.5 }}
+          cache: 'npm'
+          cache-dependency-path: package-lock.json
 
-      - name: Setup pnpm
-        uses: pnpm/action-setup@v4
-        with:
-          version: ${{ vars.PNPM_VERSION || 9 }}
-          run_install: true
+      - name: Install dependencies
+        run: npm ci
 
       - name: Verify no Firebase admin JSON leaked
         run: |
@@ -47,9 +45,7 @@ jobs:
           NEXT_PUBLIC_SUPABASE_URL: ${{ vars.NEXT_PUBLIC_SUPABASE_URL }}
           NEXT_PUBLIC_SUPABASE_ANON_KEY: ${{ secrets.NEXT_PUBLIC_SUPABASE_ANON_KEY || vars.NEXT_PUBLIC_SUPABASE_ANON_KEY }}
         run: |
-          cd apps/web
-          pnpm build
-          cd ..
+          npm run build --workspace @thecueroom/web
 
       - name: Setup Pages
         uses: actions/configure-pages@v5
